# forge

./: .env.example  .gitignore  README.md  pyproject.toml  run.py  test_models.py
api/: main.py
dashboard/: App.jsx  index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: ErrorBoundary.jsx
docker/: Dockerfile  docker-compose.yml
forge_core/: config.py  events.py  models.py  orchestrator.py  storage.py
forge_core/agents/: base.py  specialized.py
forge_core/architect/: master.py
forge_core/feedback/: handler.py
forge_core/intake/: engine.py
forge_core/llm/: gateway.py  key_pool.py  rate_limiter.py
forge_core/llm/prompts/: templates.py
forge_core/workspace/: manager.py
tests/: test_core.py
