[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "1.0.0"
description = "FORGE - Factory for Orchestrated Reliable Generation of Enterprise-software"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "litellm>=1.40.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "gitpython>=3.1.43",
    "docker>=7.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "cssutils>=2.11.0",
    "Pillow>=10.3.0",
    "rich>=13.7.0",
    "tenacity>=8.4.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
where = ["."]
include = ["forge_core*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
